# TeamERepo

./: READ.ME
task1/task/: README.md  bench.out  benchmark2.sh  default.conf  docker-compose.yaml  nginx.conf  plot.Dockerfile
task1/teame-00-containers/: benchmark.sh  benchmark.yml  default.conf  docker-compose.yaml.save.1  docker-compose.yaml.save.2
task1/teame-01/: README.md  benchmark.sh  gen_plot.sh  plot.py
task2/: README  benchmark  docker-compose.yml  gen_plot  plot.py  reproduce
task2/basic/: Dockerfile  main.c  main.c.bak
task2/epoll/: Dockerfile  main.c  main.c.bak
task3/01-kvstore/: README.md  docker-compose.yml  script.sh
task3/01-kvstore/mariadb/: Dockerfile  crTable.sql
task3/01-kvstore/plotting/: Dockerfile  gen_plot  plot.py
task3/02-filisystem/: README.md  reproduce.sh
task3/02-filisystem/fio/: Dockerfile  benchmark.sh  btrfsbenchmark.sh  clean.sh  ext4benchmark.sh  plot.py  readrandom.fio  writerandom.fio
task3/03-networking/swiss-iperf/: .gitignore  Cargo.toml  Dockerfile.plot  README.md  build.sh  build_cargo.sh  build_nix.sh  reproduce.sh  start_iperf3_server.sh  start_swiss_server.sh  wrapper.h
task3/03-networking/swiss-iperf/scripts/: bench_iperf.py  gen_plot.py  plot.py
task3/03-networking/swiss-iperf/src/: bindings.rs  error.rs  main.rs  opts.rs  util.rs
task4/: default.nix
task4/Assignment1/: CMakeLists.txt  DeadCodeElimination.cpp  DeadCodeElimination.h  FunctionWithDeadCode.ll  PassBuilder.cpp  PassRegistry.def  README.md  setup.sh  test.c  test.ll  tmp.ll
task4/Assignment2/: Makefile  README.md  run.sh
(+14 files in other folders)
