[package]
name = "swiss-iperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.110"
bytesize = "1.1.0"

[profile.release]
debug = true
